--- a/galaxy/waterfox/policies.json.org
+++ b/galaxy/waterfox/policies.json.org
@@ -53,6 +53,7 @@
             "example.org","192.168.*", "localhost"
         ],
         "NetworkPrediction": false,
+        "NewTabPage": false,
         "PopupBlocking": {
             "Allow": [
                 "http://example.org/"
